RESOLVED FIXED156044
[ES6] Quantified unicode regular expressions do not work for counts greater than 1
https://bugs.webkit.org/show_bug.cgi?id=156044
Summary [ES6] Quantified unicode regular expressions do not work for counts greater t...
Michael Saboff
Reported 2016-03-30 15:58:01 PDT
This is from https://bugs.webkit.org/show_bug.cgi?id=151597, specifically the first two test failures given in comment 2 (https://bugs.webkit.org/show_bug.cgi?id=151597#c2) assert_equals(/𝌆{2}/u.test('𝌆𝌆'), true); assert_equals(/\uD834\uDF06{2}/u.test('\uD834\uDF06\uD834\uDF06'), true);
Attachments
Patch (4.29 KB, patch)
2016-03-30 16:07 PDT, Michael Saboff
no flags
Radar WebKit Bug Importer
Comment 1 2016-03-30 16:03:27 PDT
Michael Saboff
Comment 2 2016-03-30 16:07:43 PDT
Mark Lam
Comment 3 2016-03-30 16:12:35 PDT
Comment on attachment 275233 [details] Patch r=me
WebKit Commit Bot
Comment 4 2016-03-30 17:38:19 PDT
Comment on attachment 275233 [details] Patch Clearing flags on attachment: 275233 Committed r198866: <http://trac.webkit.org/changeset/198866>
WebKit Commit Bot
Comment 5 2016-03-30 17:38:22 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.