[ES6] Quantified unicode regular expressions do not work for counts greater than 1 https://bugs.webkit.org/show_bug.cgi?id=156044

Reviewed by Mark Lam.

Source/JavaScriptCore:

Fixed incorrect indexing of non-BMP characters in fixed patterns.  The old code
was indexing by character units, a single JS character, instead of code points
which is 2 JS characters.

* yarr/YarrInterpreter.cpp:
(JSC::Yarr::Interpreter::matchDisjunction):

LayoutTests:

Added new test cases.

* js/regexp-unicode-expected.txt:
* js/script-tests/regexp-unicode.js:


Canonical link: https://commits.webkit.org/174160@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198866 268f45cc-cd09-0410-ab3c-d52691b4dbfc